--- a/.github/workflows/deploy-aws-rds.yml
+++ b/.github/workflows/deploy-aws-rds.yml
@@ -22,6 +22,18 @@ jobs:
 
     - name: Set up Terraform
       uses: hashicorp/setup-terraform@v1
+    
+    - name: Check if the aws_db_instance already exists
+      run: |
+        if aws rds describe-db-instances --db-instance-identifier mikes-db; then
+          echo "O aws_db_instance já existe. Não é necessário criar um novo."
+          exit 0
+        fi
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        AWS_DEFAULT_REGION: us-east-1  # Substitua pela sua região
+
 
     - name: Initialize Terraform
       run: terraform init
