--- a/.github/workflows/deploy-aws-rds.yml
+++ b/.github/workflows/deploy-aws-rds.yml
@@ -18,7 +18,7 @@ jobs:
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: us-west-2
+        aws-region: us-east-2
 
     - name: Set up Terraform
       uses: hashicorp/setup-terraform@v1
@@ -32,7 +32,7 @@ jobs:
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        AWS_DEFAULT_REGION: us-east-1  # Substitua pela sua região
+        AWS_DEFAULT_REGION: us-east-2
 
 
     - name: Initialize Terraform
