--- a/.github/workflows/deploy-aws-rds.yml
+++ b/.github/workflows/deploy-aws-rds.yml
@@ -22,26 +22,12 @@ jobs:
 
     - name: Set up Terraform
       uses: hashicorp/setup-terraform@v1
-    
-    - name: Check if the aws_db_instance already exists
-      run: |
-        if aws rds describe-db-instances --db-instance-identifier mikes-db > /dev/null 2>&1; then
-          echo "O aws_db_instance já existe. Não é necessário criar um novo."
-          echo "SKIP_DEPLOY=true" >> $GITHUB_ENV
-        fi
-      env:
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        AWS_DEFAULT_REGION: us-east-2
 
     - name: Initialize Terraform
       run: terraform init
 
     - name: Deploy RDS
-      run: |
-        if [ "$SKIP_DEPLOY" != "true" ]; then
-          terraform apply -auto-approve
-        fi
+      run: terraform apply -auto-approve
 
     - name: Capture Outputs
       id: outputs
